tests/error/struct_errors/constructor_arg_mismatch_poly.err
Error: Type mismatch (at $FILE:16:16)
   | 
14 | @guppy
15 | def main() -> None:
16 |     MyStruct(0, False)
   |                 ^^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
